--- a/puzzles/css/manolodice.css
+++ b/puzzles/css/manolodice.css
@@ -4,8 +4,34 @@ body {
     color: white;
     background-color: #5e4338;
     font-family: 'Great Vibes', cursive;
+    text-align: center;
 }
 body>a {
     color: white;
 }
 
+button {
+    min-width: 100px;
+    min-height: 100px;
+    border: 5px solid lightgray;
+    display: inline-block;
+    font-size: 2rem;
+    border-radius: 1em;
+    margin-top: 30vh;
+}
+button:hover {
+    cursor: pointer;
+}
+
+#red {
+    background-color: red;
+}
+#blue {
+    background-color: blue;
+}
+#green {
+    background-color: limegreen;
+}
+#yellow {
+    background-color: yellow;
+}
