--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ h1 {
     font-weight: lighter;
 }
 p {
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: "Book Antiqua", Georgia, 'Times New Roman', Times, serif;
 }
 
 article {
