Added listener for submitting pressing Enter. Also, added a warning sign that appears when the user enters an invalid answer.

--- a/puzzles/css/detalle.css
+++ b/puzzles/css/detalle.css
@@ -96,3 +96,13 @@ button:hover {
   bottom: -3em;
   left: calc(50% - 1.5em);
 }
+
+
+#incorrect {
+    display: inline-block;
+    margin-left: .5em;
+    transition-duration: .3s;
+}
+.transparent {
+    opacity: 0;
+}
