Added listener for submitting pressing Enter. Also, added a warning sign that appears when the user enters an invalid answer.

--- a/puzzles/css/legado.css
+++ b/puzzles/css/legado.css
@@ -46,6 +46,15 @@ button:hover {
     cursor: pointer;
 }
 
+#incorrect {
+    display: inline-block;
+    margin-left: .5em;
+    transition-duration: .3s;
+}
+.transparent {
+    opacity: 0;
+}
+
 @media (max-width: 600px) {
     p{
         max-width: 100%;
