--- a/puzzles/css/completado.css
+++ b/puzzles/css/completado.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  margin-bottom: 10vh;
 }
 
 header {
@@ -10,6 +11,7 @@ p {
   max-width: 60vw;
   margin: 1em auto;
   font-size: 20px;
+  text-align: justify;
 }
 
 iframe {
@@ -25,6 +27,11 @@ iframe {
 
 img {
   max-height: 250px;
+}
+
+iframe#contactform123 {
+  overflow: hidden;
+  min-height: 100vh;
 }
 
 @media (max-width: 600px) {
